Microsoft Cognitive Services face api is used to detect ages in order to differentiate between parent and child at the begining

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
     <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
     <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
-    <string name="subscription_key">bd8b3dd3f73746749416a96dcb19f40d</string>
+    <string name="emotion_subscription_key">bd8b3dd3f73746749416a96dcb19f40d</string>
+    <string name="face_subscription_key">9ac84d1d007c4b428677015adf70d73d</string>
 </resources>
