--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
     <string name="emotion_subscription_key">bd8b3dd3f73746749416a96dcb19f40d</string>
     <string name="face_subscription_key">9ac84d1d007c4b428677015adf70d73d</string>
+    <string name="vision_subscription_key">c4670f1620d14d7985db3ffca15752b6</string>
 </resources>
